--- a/.github/workflows/task_complete.yml
+++ b/.github/workflows/task_complete.yml
@@ -1,18 +1,40 @@
-# This is a basic workflow that is manually triggered
-
-name: Task Complete
+name: Post Task to Habitica
 
 on:
   issues:
     types: [closed]
 
 jobs:
-  on-issue-closed:
+  notify-external:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Print issue info
+      - name: Post a completed task to Habitica
+        env:
+          API_KEY: ${{ secrets.EXTERNAL_API_KEY }}
+          ISSUE_TITLE: ${{ github.event.issue.title }}
+          LABELS_JSON: ${{ toJson(github.event.issue.labels) }}
         run: |
-          echo "Issue #${{ github.event.issue.number }} was closed."
-          echo "Title: ${{ github.event.issue.title }}"
-          echo "URL: ${{ github.event.issue.html_url }}"
+          # Extract effort label and map to value
+          LABEL=$(echo "$LABELS_JSON" | jq -r '.[]?.name' | grep -E '^(trivial|easy|medium|hard)' || echo "unknown")
+
+          case "$LABEL" in
+            trivial) EFFORT=0.1 ;;
+            easy)    EFFORT=1 ;;
+            medium)  EFFORT=1.5 ;;
+            hard)    EFFORT=2 ;;
+            *)       EFFORT=null ;;
+          esac
+
+          echo "Detected label: $LABEL"
+          echo "Mapped effort: $EFFORT"
+
+          # curl -X POST https://your.external.app/api/issues/closed \
+          #   -H "Authorization: Bearer $API_KEY" \
+          #   -H "Content-Type: application/json" \
+          #   -d '{
+          #     "issue_number": "'"$ISSUE_NUMBER"'",
+          #     "title": "'"$ISSUE_TITLE"'",
+          #     "url": "'"$ISSUE_URL"'",
+          #     "effort": '"$EFFORT"'
+          #   }'
