--- a/.github/workflows/task_complete.yml
+++ b/.github/workflows/task_complete.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - name: Post a completed task to Habitica
         env:
-          API_KEY: ${{ secrets.EXTERNAL_API_KEY }}
+          API_KEY: ${{ secrets.HABITICA_API_KEY }}
+          USER_ID: ${{ secrets.HABITICA_USER_ID }}
           ISSUE_TITLE: ${{ github.event.issue.title }}
           LABELS_JSON: ${{ toJson(github.event.issue.labels) }}
         run: |
@@ -29,12 +30,13 @@ jobs:
           echo "Detected label: $LABEL"
           echo "Mapped effort: $EFFORT"
 
-          # curl -X POST https://your.external.app/api/issues/closed \
-          #   -H "Authorization: Bearer $API_KEY" \
-          #   -H "Content-Type: application/json" \
-          #   -d '{
-          #     "issue_number": "'"$ISSUE_NUMBER"'",
-          #     "title": "'"$ISSUE_TITLE"'",
-          #     "url": "'"$ISSUE_URL"'",
-          #     "effort": '"$EFFORT"'
-          #   }'
+          curl -X POST https://habitica.com/api/v3/tasks/user \
+            -H "X-Api-Key: $API_KEY" \
+            -H "X-Client: $USER_ID \
+            -H "X-Api-User: $USER_ID \
+            -H "Content-Type: application/json" \
+            -d '{
+              "text": "'"$ISSUE_TITLE"'",
+              "type": "'"todo"'",
+              "priority	": '"$EFFORT"'
+            }'
