--- a/.github/workflows/task_complete.yml
+++ b/.github/workflows/task_complete.yml
@@ -38,5 +38,6 @@ jobs:
             -d '{
               "text": "'"$ISSUE_TITLE"'",
               "type": "todo",
-              "priority": '"$EFFORT"'
+              "priority": '"$EFFORT"',
+              "notes": "GITHUB"
             }'
